# zeta_predictions

./: pyproject.toml  setup.sh
notebooks/: zeta_prediction.ipynb
notebooks/.ipynb_checkpoints/: zeta_prediction-checkpoint.ipynb
src/: snowflake_utils.py
src/.ipynb_checkpoints/: eda_utils-checkpoint.py  notebook_header-checkpoint.py
